# sayo-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README.ru.md  pyproject.toml  requirements.txt  sayoctl
deploy/distributed/: README.md  cluster.yaml
deploy/single-node/: README.md  docker-compose.yml
docker/: Dockerfile.actor  Dockerfile.actor-runtime  Dockerfile.gateway  Dockerfile.host-base  Dockerfile.ray-head  Dockerfile.registry  Dockerfile.router  Dockerfile.worker_manager
proto/: sayo.proto  sayo_pb2.py  sayo_pb2_grpc.py
sayo_host/: __init__.py
sayo_host/common/: __init__.py  admin_http.py  logging.py  session.py  settings.py
sayo_host/gateway/: server.py
sayo_host/registry/: catalog.py  manifest.py  service.py  weights.py  wrapper.py
sayo_host/registry/static/: admin.html
sayo_host/router/: router.py
sayo_host/worker_manager/: manager.py
sayo_image/: __init__.py
sayo_image/model_repository/: __init__.py  base.py  model_repository.py
sayo_image/transcript_actor/: actor.py  audio.py  bootstrap.py  log_config.py
sayo_image/vad/: silero.py
tests/smoke/: README.md  run.py
vad-weights/: README.md  silero_vad.onnx.placeholder
