[project]
name = "sayo-backend-system"
version = "0.1.0"
description = "Sayo backend for one-node and distributed STT systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.80.0",
    "protobuf>=6.33.0,<7",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "ray[default]>=2.30.0",
    "docker>=7.0.0",
    "pynvml>=11.5.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
sayoctl = "sayoctl:main"

[tool.setuptools.packages.find]
include = ["sayo_host*", "sayo_image*", "proto*"]
exclude = ["docker*", "deploy*", "vad-weights*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E, W — flake8 errors / warnings
# F — pyflakes
# I — isort
# B — flake8-bugbear
# C4 — flake8-comprehensions
select = ["E", "W", "F", "I", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"proto/*" = ["E", "W", "F", "I", "B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["sayo_host", "sayo_image", "proto"]

[dependency-groups]
dev = [
    "grpcio-tools==1.80.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
]
